# BYONDDiffBots

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml.dist  docker-compose.yml
.github/workflows/: docker.yml  rust.yml
config/: README.md
crates/MapDiffBot2/: Cargo.toml  README.md
crates/MapDiffBot2/src/: diff_template_mod.txt  github_api.rs  github_processor.rs  github_types.rs  job.rs  job_processor.rs  main.rs
crates/diffbot_lib/: Cargo.toml
crates/diffbot_lib/src/: git.rs  github.rs  job.rs  lib.rs  logger.rs  verify.rs
crates/diffbot_lib/src/git/: git_operations.rs
crates/diffbot_lib/src/github/: error_template.txt  github_api.rs  github_types.rs  graphql.rs
crates/diffbot_lib/src/job/: runner.rs  types.rs
crates/icondiffbot2/: .gitignore  Cargo.toml  config.example.toml
crates/icondiffbot2/config/: config.example.toml
crates/icondiffbot2/src/: downloading.rs  error.rs  github_api.rs  github_processor.rs  github_types.rs  helpers.rs  job_processor.rs  main.rs  runner.rs  sha.rs  table_builder.rs
crates/icondiffbot2/templates/: diff_add.txt  diff_details.txt  diff_line.txt  diff_line_error.txt  diff_modify.txt  diff_remove.txt
crates/icondiffbot_test_generator/: Cargo.toml
crates/icondiffbot_test_generator/src/: main.rs
crates/mapdiffbot2/: Cargo.toml  LICENSE  Rocket.example.toml  Rocket.toml.dist  config.example.toml
crates/mapdiffbot2/config/: config.example.toml
crates/mapdiffbot2/src/: gc_job.rs  git_operations.rs  github_processor.rs  job_processor.rs  main.rs  rendering.rs  runner.rs
crates/mapdiffbot2/templates/: diff_template_add.txt  diff_template_error.txt  diff_template_mod.txt  diff_template_remove.txt  diff_template_sizechanged.txt
crates/tinydmi/: Cargo.toml
crates/tinydmi/benches/: parser_benchmark.rs
crates/tinydmi/benches/files/: drinks.txt  paradise-ai.txt  paradise-head.txt  paradise-lefthand.txt  paradise-robots.txt  paradise-suit.txt
crates/tinydmi/src/: parser.rs
crates/tinydmi/src/parser/: atoms.rs  key_value.rs  metadata.rs  polyfill.rs  state.rs  values.rs
src/: diff_template.txt  diff_template_add.txt  diff_template_mod.txt  diff_template_remove.txt  error_template.txt  git_operations.rs  github_api.rs  github_processor.rs  github_types.rs  job.rs  job_processor.rs  main.rs  render_error.rs  rendering.rs
