[package]
name = "diffbot_lib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
octocrab = "0.34.1"
eyre = "0.6.12"
derive_builder = "0.13.1"
chrono = "0.4.34"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
tracing-panic = "0.1.1"
tracing-loki = "0.2.4"
flume = "0.11.0"
async-fs = "2.1.1"

actix-web = "4.5.1"
