[package]
name = "diffbot_lib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
octocrab = "0.43.0"
eyre = "0.6.12"
derive_builder = "0.20.2"
chrono = "0.4.39"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
tracing-panic = "0.1.2"
tracing-loki = "0.2.6"
flume = "0.11.1"
async-fs = "2.1.2"

actix-web = "4.9.0"
