[package]
name = "icondiffbot2"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
octocrab = "0.39.0"
dmm-tools = { git = "https://github.com/jupyterkat/SpacemanDMM/" }
jsonwebtoken = "9.3.0"
reqwest = "0.12.5"
diffbot_lib = { path = "../diffbot_lib" }
eyre = "0.6.12"
simple-eyre = "0.3.1"
rayon = "1.10.0"
toml = "0.8.19"
ahash = "0.8.11"
hashbrown = { version = "0.14.5", features = ["rayon"] }
tracing-loki = "0.2.5"
flume = "0.11.0"
mysql_async = "0.34.1"
time = "0.3.36"
secrecy = "0.8.0"
percent-encoding = "2.3.1"

actix-web = "4.9.0"
actix-files = "0.6.6"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

[dependencies.tracing]
version = "0.1.40"
features = ["attributes"]
