[package]
name = "icondiffbot2"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
octocrab = "0.43.0"
dmm-tools = { git = "https://github.com/jupyterkat/SpacemanDMM/" }
jsonwebtoken = "9.3.1"
reqwest = "0.12.12"
diffbot_lib = { path = "../diffbot_lib" }
eyre = "0.6.12"
simple-eyre = "0.3.1"
rayon = "1.10.0"
toml = "0.8.20"
ahash = "0.8.11"
hashbrown = { version = "0.15.2", features = ["rayon"] }
tracing-loki = "0.2.6"
flume = "0.11.1"
mysql_async = "0.35.1"
time = "0.3.37"
secrecy = "0.10.3"
percent-encoding = "2.3.1"

actix-web = "4.9.0"
actix-files = "0.6.6"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

[dependencies.tracing]
version = "0.1.41"
features = ["attributes"]
