[package]
name = "icondiffbot_test_generator"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.39.0"
clap = { version = "4.5.15", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
