[package]
name = "icondiffbot_test_generator"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.41.2"
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
